--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="container">
-<form method="post" action="exam">
+<form method="post" action="next">
 <h1>Registration Form</h1>
 	<input type="text" placeholder="Name" name="name"><br/><br/>
 	<input type="email" placeholder="Email" name="email"><br/><br/>
